--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 		    video {
 		        height: 100vh;
 		        width: 100%;
-		        object-fit: fill; // use "cover" to avoid distortion
+		        object-fit: fill;
 		        /*position: absolute;*/
 		    }
 		</style>
