--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 				</div>
 			</div>
 		</div>
-		<video src="/images/22.mp4" autoplay muted loop></video>
+		<video src="images/22.mp4" autoplay muted loop></video>
 		<style>
 		    video {
 		        height: 100vh;
