bride and groom changes

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-10 col-lg-8">
-                            <h1>The Gangs of Groomsmen&nbsp;<br></h1>
+                            <h1>The Beautiful Bridesmaid &nbsp;<br></h1>
                             <p class="lead"> Our Close Friends and Families</p>
                         </div>
                     </div>
@@ -299,7 +299,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-10 col-lg-8">
-                            <h1>The Bunch of Bridesmaid </h1>
+                            <h1>The Gangs of Groomsmen</h1>
                             <p class="lead"> Our Close Friends and Families </p>
                         </div>
                     </div>
