--- a/index.html
+++ b/index.html
@@ -184,87 +184,87 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds19.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds19.png">
                                 <h5>Bhavana</h5></div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds21.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds21.png">
                                 <h5>Greeshma</h5>  </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds9.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds9.png">
                                 <h5>Yash</h5> </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds25.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds25.png">
                                 <h5>Sanika</h5>  </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds2.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds2.png">
                                 <h5>Manasa</h5> </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds22.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds22.png">
                                 <h5>Roopashree</h5>  </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds23.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds23.png">
                                 <h5>Kusuma</h5>  </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds17.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds17.png">
                                 <h5>Sundar</h5>  </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds24.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds24.png">
                                 <h5>Sachin</h5>  </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds26.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds26.png">
                                 <h5>Shivali</h5>  </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds16.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds16.png">
                                 <h5>Sanketh</h5>  </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds13.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds13.png">
                                 <h5>Vani</h5>  </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds15.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds15.png">
                                 <h5>Sheetal</h5>  </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds1.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds1.png">
                                 <h5>Sindhu</h5> </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds20.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds20.png">
                                 <h5>Babli Akka and Fam</h5>  </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds14.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds14.png">
                                 <h5>Pooja</h5>  </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds12.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds12.png">
                                 <h5>Raksha</h5>  </div>
                         </div>                      
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds18.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds18.png">
                                 <h5>Shreya</h5>  </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds10.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds10.png">
                                 <h5>Sri Kanta</h5>  </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds37.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds37.png">
                                 <h5>Chandini</h5>  </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds38.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds38.png">
                                 <h5>Nidhi Shekar</h5>  </div>
                         </div>
                     </div>
@@ -284,39 +284,39 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds3.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds3.png">
                                 <h5>Harshita</h5> </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds4.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds4.png">
                                 <h5>Chethan</h5> </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds5.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds5.png">
                                 <h5>Govardhan</h5></div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds6.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds6.png">
                                 <h5>Gandharv</h5> </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds7.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds7.png">
                                 <h5>Trupthi</h5>  </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds8.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds8.png">
                                 <h5>Nupur & Monisha</h5>  </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds30.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds30.png">
                                 <h5>Mohan</h5>  </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds32.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds32.png">
                                 <h5>Soujanya</h5>  </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds33.JPG">
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds33.png">
                                 <h5>Kiran</h5>  </div>
                         </div>
                     </div>
