--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body data-smooth-scroll-offset="77">
         <div class="nav-container"> </div>
         <div class="main-container">
-            <section class="imagebg videobg text-center height-100" data-overlay="4"> <video autoplay="" loop="" muted="">
+            <section class="imagebg videobg text-center height-100" data-overlay="4"> <video autoplay="" loop="" muted="" playsinline>
 		<source src="video/video.webm" type="video/webm">
 		<source src="video/video.mp4" type="video/mp4">
 		<source src="video/video.ogv" type="video/ogv">
