--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <div class="row">
                         <div class="col-md-8 col-lg-7">
                             <h1><b>
-					Chandana &amp; Vasanth k</b></h1>
+					Chandana &amp; Vasanth</b></h1>
                             <h3> We are getting married on</h3>
                             <h3> December 10th, 2023 | Davanagere, Karnataka<h3>
                             <a class="btn btn--primary type--uppercase" href="#"> <span class="btn__text">
