--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body data-smooth-scroll-offset="77">
         <div class="nav-container"> </div>
         <div class="main-container">
-            <section class="imagebg videobg text-center height-100" data-overlay="4"> <video loop autoplay muted controls="false" width='100%' height='100%'>
+            <!-- <section class="imagebg videobg text-center height-100" data-overlay="4"> <video loop autoplay muted controls width='100%' height='100%'>
 		<source src="video/video.webm" type="video/webm">
 		<source src="video/video.mp4" type="video/mp4">
 		<source src="video/video.ogv" type="video/ogv">
@@ -37,18 +37,70 @@
                         </div>
                     </div>
                 </div>
+            </section> -->
+            <!-- start of new -->
+            <section class="cover imagebg height-100 text-center" data-overlay="4">
+                <div class="background-image-holder"><img alt="background" src="img/cha24.jpeg"></div>
+                <div class="container pos-vertical-center">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h1><b>Chandana &amp; Vasanth</b></h1>
+                            <p class="lead"> We are getting married on </p>
+                            <div class="row justify-content-center mt-5">
+                                <div class="col">
+                                    <h4>December 10th, 2023 | Davanagere, Karnataka</h4>
+                                </div>
+                            </div>
+                            <form class="row justify-content-center">
+                                <div class="col-md-5 col-lg-3"> <button type="submit" class="btn btn--primary type--uppercase">Save  The Date  </button> </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </section>
+            <!-- end of new -->
             <section class="cover text-center bg--dark">
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-lg-8 col-md-12">
                             <h1>Hello There! </h1>
                             <p class="lead">Welcome to our page thanks for taking time to check in! Here we take you through our wedding story hop on for a quick and cool visual retreat! </p>
+                            <h2>The Wait is getting closer</h2>
+                            <br><br>
+                            <span class="timer countdown color--primary" data-date="12/10/2023" data-fallback-text="Getting ready" data-date-fallback="Time up ! Today is Our Wedding Day" data-days-text="Days"></span>
+
                         </div>
                     </div>
                 </div>
             </section>
-            <section class="imageblock switchable feature-large height-100 bg--dark">
+            <!-- video new start -->
+            <section class="text-center bg--dark">
+                <div class="main-container">
+                    <div class="row">
+                        <div class="col-md-12 col-lg-12">
+                            <div class="video-cover border--round">
+                                <div class="background-image-holder"> <img alt="image" src="img/cha6.jpeg"> </div>
+                                <div class="video-play-icon"></div><video loop controls width='100%' height='100%'>
+                                    <source src="video/video.webm" type="video/webm">
+                                    <source src="video/video.mp4" type="video/mp4">
+                                    <source src="video/video.ogv" type="video/ogv">
+                                </video>  </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="text-center bg--dark">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-10 col-lg-8">
+                            <h1>Two souls become one on our special day.</h1>
+                            <p class="lead">&nbsp;We request the honor of your presence as we exchange vows and celebrate our love. Please join us in this joyous occasion.<br></p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- video end -->
+            <!-- <section class="imageblock switchable feature-large height-100 bg--dark">
                 <div class="imageblock__content col-lg-6 col-md-4 pos-right">
                     <div class="background-image-holder"> <img alt="image" src="img/cha27.jpeg"> </div>
                 </div>
@@ -56,14 +108,13 @@
                     <div class="row">
                         <div class="col-lg-5 col-md-9">
                             <h2>Two souls become one on our special day.</h2>
-                            <h3>The Wait is getting closer</h3> <span class="h1 countdown color--primary" data-date="12/10/2023" data-fallback-text="Getting ready" data-date-fallback="Time up ! Today is Our Wedding Day" data-days-text="Days"></span>
-                            <p class="lead">&nbsp;We request the honor of your presence as we exchange vows and celebrate our love. Please join us in this joyous occasion. </p>
+                                                        <p class="lead">&nbsp;We request the honor of your presence as we exchange vows and celebrate our love. Please join us in this joyous occasion. </p>
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
             <section class="text-center imagebg parallax space--md" data-overlay="4">
-                <div class="background-image-holder"> <img alt="background" src="img/cha4.jpeg"> </div>
+                <div class="background-image-holder"> <img alt="background" src="img/cha21.jpeg"> </div>
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-8 col-md-11">
@@ -108,23 +159,23 @@
                         <div class="col-lg-8">
                             <div class="process-1">
                                 <div class="process__item">
-                                    <h4>How it Started ?</h4>
-                                    <p>Our story strated in 2020, Feb 15th When I saw Chandana for first time in my brothers marriage, It was like a love at first sight. I'm generally not an outspoken guy but that day I felt like I should speak to her, and then when I spoke to her I felt "Yes, this is the one for me". I took her number but unfortunately lost it, upon that I forgot to ask her name. Later I tried to get contact through multiple ways but tough luck, I couldn't. Then I told myself if its for me It will come back to me.</p>
+                                    <h2>How it Started ?</h2>
+                                    <h4>Our story strated in 2020, Feb 15th When I saw Chandana for first time in my brothers marriage, It was like a love at first sight. I'm generally not an outspoken guy but that day I felt like I should speak to her, and then when I spoke to her I felt "Yes, this is the one for me". I took her number but unfortunately lost it, upon that I forgot to ask her name. Later I tried to get contact through multiple ways but tough luck, I couldn't. Then I told myself if its for me It will come back to me.</h4>
                                 </div>
                                 <div class="process__item">
-                                    <h4>After 3 years</h4>
-                                    <p> Later in 2023, her profile was brought to me by my brothers, thats when I confirmed myself yes, we are destined to be together. I personally met her on 6th of May, and took her opinion.
-                                        Within a month our families met, and Finally we got engaged and marriage dates got fixed.</p>
+                                    <h2>>After 3 years</h2>
+                                    <h4> Later in 2023, her profile was brought to me by my brothers, thats when I confirmed myself yes, we are destined to be together. I personally met her on 6th of May, and took her opinion.
+                                        Within a month our families met, and Finally we got engaged and marriage dates got fixed.</h4>
                                 </div>
                                 <div class="process__item">
-                                    <h4>What Chandana has to say</h4>
-                                    <p>First time when I met vasanth in May 2023, I was nervous, not sure about anything.. and what not? but when I came back home after meeting him, I was sure about him. All I ever asked for my guy was to be replica of my dad, and he is! I mean he literally IS.. What else can I ask for?
-                                    </p>
+                                    <h2>Chandana's First Meet</h2>
+                                    <h4>First time when I met vasanth in May 2023, I was nervous, not sure about anything.. and what not? but when I came back home after meeting him, I was sure about him. All I ever asked for my guy was to be replica of my dad, and he is! I mean he literally IS.. What else can I ask for?
+                                    </h4>
                                 </div>
                                 <div class="process__item">
-                                    <h4>How its going ?</h4>
-                                    <p> By then till now Its been 6 months and we are so connected and bonded that people keep asking if it is a love marriage? we never felt that we just met eachother. That confirms we are made for eachother!s
-                                    </p>
+                                    <h2>How its going ?</h2>
+                                    <h4>By then till now Its been 6 months and we are so connected and bonded that people keep asking if it is a love marriage? we never felt that we just met eachother. That confirms we are made for eachother!s
+                                    </h4>
                                 </div>
                             </div>
                         </div>
@@ -237,7 +288,7 @@
                         </div>
                         <div class="col-md-2">
                             <div class="feature feature-8"> <img alt="Image" src="img/frnds1.png">
-                                <h5>Sindhu</h5> </div>
+                                <h5>Sindhu Akka and Fam</h5> </div>
                         </div>
                         <div class="col-md-2">
                             <div class="feature feature-8"> <img alt="Image" src="img/frnds20.png">
@@ -408,6 +459,9 @@
                     </div>
                 </div>
             </section>
+            <!-- testttt -->
+            
+            <!-- testt end -->
         </div>
         <script src="js/jquery-3.1.1.min.js"></script>
         <script src="js/parallax.js"></script>
