--- a/index.html
+++ b/index.html
@@ -79,12 +79,13 @@
                     <div class="row">
                         <div class="col-md-12 col-lg-12">
                             <div class="video-cover border--round">
-                                <div class="background-image-holder"> <img alt="image" src="img/cha6.jpeg"> </div>
+                                <div class="background-image-holder"> <img alt="image" src="img/cha55.png"> </div>
                                 <div class="video-play-icon"></div><video loop controls width='100%' height='100%'>
                                     <source src="video/video.webm" type="video/webm">
                                     <source src="video/video.mp4" type="video/mp4">
                                     <source src="video/video.ogv" type="video/ogv">
-                                </video>  </div>
+                                </video>  
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -153,7 +154,7 @@
                 </div>
             </section>
             <section class="imagebg parallax" data-overlay="6">
-                <div class="background-image-holder"> <img alt="background" src="img/cha24.jpeg"> </div>
+                <div class="background-image-holder"> <img alt="background" src="img/cha6.jpeg"> </div>
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-lg-8">
@@ -287,12 +288,12 @@
                                 <h5>Sheetal</h5>  </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds1.png">
-                                <h5>Sindhu Akka and Fam</h5> </div>
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds41.png">
+                                <h5>Jagadish</h5> </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds20.png">
-                                <h5>Babli Akka and Fam</h5>  </div>
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds40.png">
+                                <h5>Sagar</h5>  </div>
                         </div>
                         <div class="col-md-2">
                             <div class="feature feature-8"> <img alt="Image" src="img/frnds14.png">
@@ -388,61 +389,61 @@
                     <div class="masonry">
                         <div class="masonry__container row masonry--active">
                             <div class="masonry__item col-lg-4 col-6 filter-people" data-masonry-filter="People">
-                                <a href="img/work-6.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha3.jpeg"> </a>
+                                <a href="img/cha3.jpeg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha3.jpeg"> </a>
                             </div>
                             <div class="masonry__item col-lg-4 col-6 filter-people" data-masonry-filter="People">
-                                <a href="img/work-3.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha2.jpeg"> </a>
+                                <a href="img/cha2.jpeg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha2.jpeg"> </a>
                             </div>
                             <div class="masonry__item col-lg-4 col-6 filter-people" data-masonry-filter="People">
-                                <a href="img/work-3.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha5.jpeg"> </a>
+                                <a href="img/cha5.jpeg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha5.jpeg"> </a>
                             </div>
                             <div class="masonry__item col-lg-4 col-6 filter-people" data-masonry-filter="People">
-                                <a href="img/work-3.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha4.jpeg"> </a>
+                                <a href="img/cha4.jpeg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha4.jpeg"> </a>
                             </div>
                             <div class="masonry__item col-lg-4 col-6 filter-people" data-masonry-filter="People">
-                                <a href="img/work-3.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha8.jpeg"> </a>
+                                <a href="img/cha8.jpeg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha8.jpeg"> </a>
                             </div>
                             <div class="masonry__item col-lg-4 col-6 filter-people" data-masonry-filter="People">
-                                <a href="img/work-3.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha9.jpeg"> </a>
+                                <a href="img/cha9.jpeg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha9.jpeg"> </a>
                             </div>
                             <div class="masonry__item col-lg-4 col-6 filter-people" data-masonry-filter="People">
-                                <a href="img/work-3.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha10.jpeg"> </a>
+                                <a href="img/cha10.jpeg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha10.jpeg"> </a>
                             </div>
                             <div class="masonry__item col-lg-4 col-6 filter-people" data-masonry-filter="People">
-                                <a href="img/work-3.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha6.jpeg"> </a>
+                                <a href="img/cha6.jpeg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha6.jpeg"> </a>
                             </div>
                             <div class="masonry__item col-lg-4 col-6 filter-people" data-masonry-filter="People">
-                                <a href="img/work-3.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha11.jpeg"> </a>
+                                <a href="img/cha11.jpeg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha11.jpeg"> </a>
                             </div>
                             <div class="masonry__item col-lg-4 col-6 filter-people" data-masonry-filter="People">
-                                <a href="img/work-3.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha12.jpeg"> </a>
+                                <a href="img/cha12.jpeg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha12.jpeg"> </a>
                             </div>
                             <div class="masonry__item col-lg-4 col-6 filter-people" data-masonry-filter="People">
-                                <a href="img/work-3.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha13.jpeg"> </a>
+                                <a href="img/cha13.jpeg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha13.jpeg"> </a>
                             </div>
                             <div class="masonry__item col-lg-4 col-6 filter-people" data-masonry-filter="People">
-                                <a href="img/work-3.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha18.jpeg"> </a>
+                                <a href="img/cha18.jpeg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha18.jpeg"> </a>
                             </div>
                             <div class="masonry__item col-lg-4 col-6 filter-people" data-masonry-filter="People">
-                                <a href="img/work-3.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha14.jpeg"> </a>
+                                <a href="img/cha14.jpeg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha14.jpeg"> </a>
                             </div>
                             <div class="masonry__item col-lg-4 col-6 filter-people" data-masonry-filter="People">
-                                <a href="img/work-3.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha15.jpeg"> </a>
+                                <a href="img/cha15.jpeg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha15.jpeg"> </a>
                             </div>
                             <div class="masonry__item col-lg-4 col-6 filter-people" data-masonry-filter="People">
-                                <a href="img/work-3.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha20.jpeg"> </a>
+                                <a href="img/cha20.jpeg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha20.jpeg"> </a>
                             </div>
                             <div class="masonry__item col-lg-4 col-6 filter-people" data-masonry-filter="People">
-                                <a href="img/work-3.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha19.jpeg"> </a>
+                                <a href="img/cha19.jpeg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha19.jpeg"> </a>
                             </div>
                             <div class="masonry__item col-lg-4 col-6 filter-people" data-masonry-filter="People">
-                                <a href="img/work-3.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha17.jpeg"> </a>
+                                <a href="img/cha17.jpeg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha17.jpeg"> </a>
                             </div>
                             <div class="masonry__item col-lg-4 col-6 filter-people" data-masonry-filter="People">
-                                <a href="img/work-3.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha16.jpeg"> </a>
+                                <a href="img/cha16.jpeg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha16.jpeg"> </a>
                             </div>
                             <div class="masonry__item col-lg-4 col-6 filter-people" data-masonry-filter="People">
-                                <a href="img/work-3.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha7.jpeg"> </a>
+                                <a href="img/cha7.jpeg" data-lightbox="Gallery 1"> <img alt="Image" src="img/cha7.jpeg"> </a>
                             </div>
                         </div>
                     </div>
@@ -459,9 +460,6 @@
                     </div>
                 </div>
             </section>
-            <!-- testttt -->
-            
-            <!-- testt end -->
         </div>
         <script src="js/jquery-3.1.1.min.js"></script>
         <script src="js/parallax.js"></script>
