new new changes

--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
                     </div>
                 </div>
             </section>
-            <section class="imagebg parallax" data-overlay="6">
-                <div class="background-image-holder"> <img alt="background" src="img/cha6.jpeg"> </div>
+            <section class="imagebg" data-overlay="6">
+                <div class="background-image-holder"> <img alt="background" src="img/cha7.jpeg"> </div>
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-lg-8">
@@ -164,7 +164,7 @@
                                     <h4>Our story strated in 2020, Feb 15th When I saw Chandana for first time in my brothers marriage, It was like a love at first sight. I'm generally not an outspoken guy but that day I felt like I should speak to her, and then when I spoke to her I felt "Yes, this is the one for me". I took her number but unfortunately lost it, upon that I forgot to ask her name. Later I tried to get contact through multiple ways but tough luck, I couldn't. Then I told myself if its for me It will come back to me.</h4>
                                 </div>
                                 <div class="process__item">
-                                    <h2>>After 3 years</h2>
+                                    <h2>After 3 years</h2>
                                     <h4> Later in 2023, her profile was brought to me by my brothers, thats when I confirmed myself yes, we are destined to be together. I personally met her on 6th of May, and took her opinion.
                                         Within a month our families met, and Finally we got engaged and marriage dates got fixed.</h4>
                                 </div>
@@ -175,7 +175,7 @@
                                 </div>
                                 <div class="process__item">
                                     <h2>How its going ?</h2>
-                                    <h4>By then till now Its been 6 months and we are so connected and bonded that people keep asking if it is a love marriage? we never felt that we just met eachother. That confirms we are made for eachother!s
+                                    <h4>By then till now Its been 6 months and we are so connected and bonded that people keep asking if it is a love marriage? we never felt that we just met eachother. That confirms we are made for eachother
                                     </h4>
                                 </div>
                             </div>
@@ -336,10 +336,6 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds3.png">
-                                <h5>Harshita</h5> </div>
-                        </div>
-                        <div class="col-md-2">
                             <div class="feature feature-8"> <img alt="Image" src="img/frnds4.png">
                                 <h5>Chethan</h5> </div>
                         </div>
@@ -356,20 +352,12 @@
                                 <h5>Trupthi</h5>  </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds8.png">
-                                <h5>Nupur & Monisha</h5>  </div>
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds67.png">
+                                <h5>Monisha</h5>  </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds30.png">
-                                <h5>Mohan</h5>  </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds32.png">
-                                <h5>Soujanya</h5>  </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="feature feature-8"> <img alt="Image" src="img/frnds33.png">
-                                <h5>Kiran</h5>  </div>
+                            <div class="feature feature-8"> <img alt="Image" src="img/frnds66.png">
+                                <h5>Nupur</h5>  </div>
                         </div>
                     </div>
                 </div>
